--- a/app/views/vehiculos/new.html.erb
+++ b/app/views/vehiculos/new.html.erb
@@ -1,5 +1,15 @@
 <h1>Nuevo vehículo </h1>
 <%= form_for(@vehiculo) do |f| %>
+	<% if @vehiculo.errors.any? %>
+		<div id="error_explanation">
+		<h2><%= pluralize(@vehiculo.errors.count,"error") %> no permiten que el vehiculo se guarde:</h2>
+			<ul><%@vehiculo.errors.full_messages.each do |msg| %>
+				<li><%= msg %></li>
+				<%end %>
+			</ul>
+		</div>
+	<% end %>
+			
 	<p>
 	<%= f.label :dominio %><br>
 	<%= f.text_field :dominio %>
