--- a/app/views/vehiculos/index.html.erb
+++ b/app/views/vehiculos/index.html.erb
@@ -1,8 +1,13 @@
-<h1> Vehículos </h1>
-<%= link_to "Vender vehiculo", new_vehiculo_path %>
+<div class="page-header"><h1> Vehículos </h1>
+	<ul class="actions">
+	<li>
+		<%= link_to fa_icon("plus") + " Vender vehiculo", new_vehiculo_path, class: "btn btn-success" %>
+	</li>
+	</ul>
+</div>
 <div id="vehiculos">
-<% @vehiculos.each do |v| %>
-	<h2><%= link_to v.dominio, v %></h2>
-	<p><%= v.descripcion %></p>
-	<% end %>
+	<% @vehiculos.each do |v| %>
+		<h2><%= link_to v.dominio, v %></h2>
+		<p><%= v.descripcion %></p>
+		<% end %>
 </div>
