--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,31 @@
   </head>
 
   <body>
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 	<div class="container">
+		<div class="navbar-header">
+			<%= link_to "Autoshop", root_path, class: "navbar-brand" %>
+			<button type="button" class="navbar-toggle collapsed" data-target="#collapse">
+			<span class="sr-only">Toggle navigation</span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			</button>
+		</div>
+		<div class="collapse navbar-collapse" id="collapse">
+			<ul class="nav navbar-nav">
+				<li class="<%= "active" if current_page?("/") %>">
+					<%= link_to "Home", root_path %>
+				</li>
+			</ul>
+		</div>
+	</div>
+	</nav>
+	
+			
+			
 		<% flash.each do |key, message| %>
-			<div><%= message %></div>
+			<div class="alert alert-<%= key %>"><%= message %></div>
 		<% end %>	
 		<%= yield %>
 	</div>
